--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description"       : "Improves node.js stacktraces and makes it easier to handle errors",
   "homepage"          : "https://github.com/Pita/async-stacktrace",
   "author"            : "Peter 'Pita' Martischka <petermartischka@googlemail.com>",
-  "dev-dependencies"  : {
+  "devDependencies"  : {
                           "vows"      : "0.6.0"
                         },
   "main"              : "./ERR",
